# dynasm-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  build_docs.sh  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/examples/bf-jit/: Cargo.toml
doc/examples/bf-jit/src/: aarch64.rs  main.rs  riscv64.rs  x64.rs
doc/examples/hello-world/: Cargo.toml
doc/examples/hello-world/src/: aarch64.rs  main.rs  riscv64.rs  x64.rs
doc/insref/: Cargo.toml
doc/insref/src/: export.rs  main.rs
plugin/: Cargo.toml  aliases.js  crates.js  search-index.js  settings.html  source-files.js
plugin/doc/: formatting.css  index.md  pre.html  tutorial.md
plugin/dynasm/: CrateLocalData.t.html  DynasmData.t.html  all.html  crate_local_data.v.html  fn.crate_local_data.html  fn.registrar.html  index.html  macro.dynasm.html  macro.dynasm_backwards!.html  macro.dynasm_backwards.html  registrar.v.html  sidebar-items.js  struct.DynasmData.html  struct.State.html  type.CrateLocalData.html
plugin/dynasm/arch/: Arch.t.html  CURRENT_ARCH.v.html  DummyArch.t.html  constant.CURRENT_ARCH.html  fn.from_str.html  index.html  sidebar-items.js  struct.DummyArch.html  trait.Arch.html
plugin/dynasm/arch/x64/: Archx64.t.html  Archx86.t.html  X86Mode.t.html  enum.X86Mode.html  index.html  sidebar-items.js  struct.Archx64.html  struct.Archx86.html  struct.Context.html
plugin/implementors/collections/borrow/: trait.ToOwned.js
plugin/implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
plugin/implementors/core/clone/: trait.Clone.js
plugin/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
plugin/implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.Into.js
plugin/implementors/core/default/: trait.Default.js
plugin/implementors/core/fmt/: trait.Binary.js  trait.Debug.js  trait.Display.js  trait.LowerHex.js  trait.Octal.js  trait.Pointer.js  trait.UpperHex.js  trait.Write.js
plugin/implementors/core/hash/: trait.BuildHasher.js  trait.Hash.js  trait.Hasher.js
plugin/implementors/core/marker/: trait.Copy.js  trait.Send.js  trait.Sync.js
plugin/implementors/core/ops/: trait.Add.js  trait.AddAssign.js  trait.BitAnd.js  trait.BitAndAssign.js  trait.BitOr.js  trait.BitOrAssign.js  trait.BitXor.js  trait.BitXorAssign.js  trait.BoxPlace.js  trait.Boxed.js  trait.CoerceUnsized.js  trait.Deref.js  trait.DerefMut.js  trait.Div.js  trait.DivAssign.js  trait.Drop.js  trait.FnMut.js  trait.FnOnce.js  trait.InPlace.js  trait.Index.js  trait.IndexMut.js  trait.Mul.js  trait.Neg.js  (+10 more)
plugin/implementors/graphviz/: trait.GraphWalk.js  trait.Labeller.js
plugin/implementors/rustc_errors/: trait.CodeMapper.js
plugin/implementors/stable_deref_trait/: trait.CloneStableDeref.js  trait.StableDeref.js
plugin/src/: common.rs  compiler.rs  debug.rs  directive.rs  lib.rs  parse_helpers.rs  parser.rs  serialize.rs  x64data.rs
plugin/src/arch/: mod.rs
plugin/src/dynasm/: common.rs.html  directive.rs.html  lib.rs.html  parse_helpers.rs.html  serialize.rs.html
runtime/: Cargo.toml  aliases.js  crates.js  main.js  search-index.js  settings.html  source-files.js  storage.js
runtime/dynasmrt/: AssemblyOffset.t.html  DynamicLabel.t.html  DynasmApi.t.html  DynasmError.t.html  DynasmLabelApi.t.html  ExecutableBuffer.t.html  Executor.t.html  all.html  enum.DynasmError.html  enum.LabelKind.html  enum.TargetKind.html  index.html  macro.MutPointer.html  macro.Pointer.html  macro.dynasm.html  macro.dynasm_backwards.html  sidebar-items.js  struct.Assembler.html  struct.AssemblyOffset.html  struct.DynamicLabel.html  struct.ExecutableBuffer.html  struct.Executor.html  struct.LabelRegistry.html  struct.ManagedRelocs.html  struct.Modifier.html  struct.PatchLoc.html  struct.RelocRegistry.html  struct.SimpleAssembler.html  struct.UncommittedModifier.html  struct.VecAssembler.html  trait.DynasmApi.html  trait.DynasmLabelApi.html  trait.Register.html
runtime/dynasmrt/aarch64/: enum.Aarch64Relocation.html  enum.RV.html  enum.RX.html  enum.RXSP.html  fn.encode_floating_point_immediate.html  fn.encode_logical_immediate_32bit.html  fn.encode_logical_immediate_64bit.html  index.html  sidebar-items.js  struct.Assembler.html  struct.AssemblyModifier.html  type.Assembler.html  type.AssemblyModifier.html  type.UncommittedModifier.html
runtime/dynasmrt/common/: index.html  struct.UncommittedModifier.html
runtime/dynasmrt/components/: index.html  sidebar-items.js  struct.LabelRegistry.html  struct.LitPool.html  struct.ManagedRelocs.html  struct.MemoryManager.html  struct.PatchLoc.html  struct.RelocRegistry.html  struct.UncommittedModifier.html
runtime/dynasmrt/mmap/: index.html  sidebar-items.js  struct.ExecutableBuffer.html  struct.MutableBuffer.html
runtime/dynasmrt/relocations/: enum.Aarch64Relocation.html  enum.RelocationKind.html  enum.RelocationSize.html  index.html  sidebar-items.js  struct.ImpossibleRelocation.html  struct.X64Relocation.html  struct.X86Relocation.html  trait.Relocation.html
runtime/dynasmrt/x64/: Assembler.t.html  UncommittedModifier.t.html  enum.RC.html  enum.Rq.html  enum.Rx.html  index.html  sidebar-items.js  struct.Assembler.html  struct.AssemblyModifier.html  struct.UncommittedModifier.html  struct.X64Relocation.html  type.Assembler.html  type.AssemblyModifier.html  type.UncommittedModifier.html
runtime/dynasmrt/x86/: AssemblyModifier.t.html  enum.RB.html  enum.RC.html  enum.RD.html  enum.Rf.html  enum.Rh.html  enum.Rm.html  enum.Rs.html  enum.Rx.html  index.html  sidebar-items.js  struct.Assembler.html  struct.AssemblyModifier.html  struct.X86Relocation.html  type.Assembler.html  type.AssemblyModifier.html  type.UncommittedModifier.html
runtime/implementors/dynasmrt/: trait.Register.js
runtime/src/: aarch64.rs  cache_control.rs  common.rs  components.rs  lib.rs  mmap.rs  relocations.rs  riscv.rs  riscv64.rs  x64.rs  x86.rs
runtime/src/dynasmrt/: aarch64.rs.html  common.rs.html  components.rs.html  lib.rs.html  mmap.rs.html  relocations.rs.html  x64.rs.html  x86.rs.html
(+1391 files in other folders)
