[workspace]

members = [
    "plugin",
    "runtime",
    "testing",
    "doc/insref",
    "doc/examples/bf-interpreter",
    "doc/examples/bf-jit",
    "doc/examples/hello-world",
]

[workspace.package]
authors = ["Alexander Stocko <as@coder.gg>", "CensoredUsername <cens.username@gmail.com>"]
version = "2.0.0"
edition = "2018"

documentation = "https://censoredusername.github.io/dynasm-rs/language/index.html"
repository = "https://github.com/CensoredUsername/dynasm-rs"

readme = "README.md"
keywords = ["jit", "dynasm", "dynasmrt", "dynasm-rs", "assembler"]
license = "MPL-2.0"

# Source Code Form notice (MPL-2.0 Exhibit A)
# This notice applies to all source files within this workspace.
#
#   This Source Code Form is subject to the terms of the Mozilla Public
#   License, v. 2.0. If a copy of the MPL was not distributed with this
#   file, You can obtain one at http://mozilla.org/MPL/2.0/.
