[package]
name = "dynasm"
version = "1.0.1"
authors = ["Alexander Stocko <as@coder.gg>", "CensoredUsername <cens.username@gmail.com>"]
edition = "2018"

description = "A plugin for assembling code at runtime. Combined with the runtime crate dynasmrt it can be used to write JIT compilers easily."

documentation = "https://censoredusername.github.io/dynasm-rs/plugin/dynasm/index.html"
repository = "https://github.com/CensoredUsername/dynasm-rs"

readme = "../README.md"
keywords = ["jit", "dynasm", "dynasmrt", "dynasm-rs", "assembler"]
license = "MPL-2.0"

[lib]
name = "dynasm"
proc-macro = true

[dependencies]
lazy_static = "1"
bitflags = "1"
byteorder = "1"
quote = "1"
proc-macro-error = "1"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "1.0.19"

[features]
dynasm_opmap = []
dynasm_extract = []
filelocal = []

default = []