[package]
name = "dynasm"
version.workspace = true
authors.workspace = true
edition.workspace = true

description = "A plugin for assembling code at runtime. Combined with the runtime crate dynasmrt it can be used to write JIT compilers easily."

documentation.workspace = true
repository.workspace = true

readme.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "dynasm"
proc-macro = true

[dependencies]
lazy_static = "1"
bitflags = "1.1.0"
byteorder = "1"
quote = "1"
proc-macro-error2 = "2.0"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits"]

[dependencies.proc-macro2]
version = "1.0.26"

[features]
dynasm_opmap = []
dynasm_extract = []
filelocal = []

default = []
