[package]
name = "dynasmrt"
version.workspace = true
authors.workspace = true
edition.workspace = true

description = "A simple runtime for assembling code at runtime. Combined with the plugin crate dynasm it can be used to write JIT compilers easily."

documentation.workspace = true
repository.workspace = true

readme.workspace = true
keywords.workspace = true
license.workspace = true


[dependencies]
memmap2 = { version = "0.9.5", optional = true }
byteorder = { version = "1.5.0", default-features = false }
fnv = { version = "1.0.7", default-features = false }
dynasm = { version = "=3.0.1", path = "../plugin" }
hashbrown = "0.15.1"

[features]
default = []
std = ["fnv/std", "byteorder/std", "memmap2"]