[package]
name = "bf-jit"
version = "0.1.0"
authors = ["CensoredUsername <cens.username@gmail.com>"]
edition = "2021"

[[bin]]
name = "bf-jit-x64"
path = "src/x64.rs"

[[bin]]
name = "bf-jit-aarch64"
path = "src/aarch64.rs"

[[bin]]
name = "bf-jit-riscv64"
path = "src/riscv64.rs"

[dependencies]
itertools = "0.14.0"

[dependencies.dynasmrt]
path = "../../../runtime"
