[package]
name = "hello-world"
version = "0.1.0"
authors = ["CensoredUsername <cens.username@gmail.com>"]
edition = "2018"

[[bin]]
name = "x64"
path = "src/x64.rs"
doc = false

[[bin]]
name = "aarch64"
path = "src/aarch64.rs"
doc = false

[dependencies]

[dependencies.dynasmrt]
path = "../../../runtime"
