[package]
name = "hello-world"
version = "0.1.0"
authors = ["CensoredUsername <cens.username@gmail.com>"]
edition = "2021"

[[bin]]
name = "hello-world-x64"
path = "src/x64.rs"

[[bin]]
name = "hello-world-aarch64"
path = "src/aarch64.rs"

[dependencies]

[dependencies.dynasmrt]
path = "../../../runtime"
